Update broken CI

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.tags
 *.html
 *.pdf
 *.redxml
@@ -5,12 +6,19 @@
 *.txt
 *.upload
 *~
-.refcache
-.tags
-.targets.mk
+/.*.mk
+/.gems/
+/.idea/
+/.refcache
+/.venv/
+/.vscode/
 /*-[0-9][0-9].xml
+/lib
+/node_modules/
+/versioned/
 archive.json
 draft-ietf-rats-network-device-subscription.xml
-lib
+Gemfile.lock
+package-lock.json
 report.xml
-venv/
+!requirements.txt
